--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,6 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
           image: jchima/container-ci-demo
-          registry: docker.pkg.github.com
+          registry: docker.pkg.github.com/jchima/container-ci-demo
           username: ${{ secrets.GITHUBUSER }}
           password: ${{ secrets.GITHUBPASSWORD }}
