--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,10 @@ jobs:
         run: |
           ./mvnw clean install
           mv target/container-ci-demo-0.0.1-SNAPSHOT.jar target/container-ci-demo.jar
-
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       # Runs a set of commands using the runners shell
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
