--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,15 +39,26 @@ jobs:
           ./mvnw clean install
           mv target/container-ci-demo-0.0.1-SNAPSHOT.jar target/container-ci-demo.jar
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
-      # Runs a set of commands using the runners shell
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v2
-        #uses: mr-smithers-excellent/docker-build-push@v4
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
           image: container-ci-demo/container-ci-demo
           registry: docker.pkg.github.com
           username: ${{ secrets.GITHUBUSER }}
           password: ${{ secrets.GITHUBPASSWORD }}
+        
+      # Runs a set of commands using the runners shell
+      #- name: Build and Push Docker Image
+      #  uses: docker/build-push-action@v2
+       # #uses: mr-smithers-excellent/docker-build-push@v4
+       # with:
+       #   image: container-ci-demo/container-ci-demo
+        #  registry: docker.pkg.github.com
+         # username: ${{ secrets.GITHUBUSER }}
+         # password: ${{ secrets.GITHUBPASSWORD }}
