--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           password: ${{ secrets.GITHUBPASSWORD }}
       -
         name: Build and push
-        id: docker_build
+        #id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
