--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
           context: .
           push: true
           tags: user/app:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
         
       # Runs a set of commands using the runners shell
       #- name: Build and Push Docker Image
