--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,13 @@ jobs:
         uses: docker/setup-buildx-action@v1
         
       -  
-        name: Login to GitHub Container Registry
+        name: Login to GitHub Package Registry
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
+          #registry: ghcr.io
+          #username: ${{ github.actor }}
+          registry: docker.pkg.github.com
+          username: ${{ secrets.GITHUBUSER }}
           password: ${{ secrets.GITHUBPASSWORD }}
       -
         name: Build and push
