--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,12 +47,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
         
       -  
-        name: Login to GitHub Package Registry
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          #registry: ghcr.io
+          registry: ghcr.io
           #username: ${{ github.actor }}
-          registry: docker.pkg.github.com
           username: ${{ secrets.GITHUBUSER }}
           password: ${{ secrets.GITHUBPASSWORD }}
       -
@@ -62,8 +61,16 @@ jobs:
           context: .
           push: true
           tags: user/app:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      -
+        # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
         
       # Runs a set of commands using the runners shell
       #- name: Build and Push Docker Image
