--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    tags:
+      - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,7 +40,12 @@ jobs:
         run: |
           ./mvnw clean install
           mv target/container-ci-demo-0.0.1-SNAPSHOT.jar target/container-ci-demo.jar
-        
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: container-ci-demo/container-ci-demo
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -60,17 +67,18 @@ jobs:
         with:
           context: .
           push: true
-          tags: jchima/container-ci-demo:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      -
+          tags: ${{ steps.meta.outputs.tags }}
+          label: ${{ steps.meta.outputs.labels }}
+          #cache-from: type=local,src=/tmp/.buildx-cache
+          #cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      #-
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
         # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        #name: Move cache
+        #run: |
+          #rm -rf /tmp/.buildx-cache
+          #mv /tmp/.buildx-cache-new /tmp/.buildx-cache
         
       # Runs a set of commands using the runners shell
       #- name: Build and Push Docker Image
