--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: container-ci-demo/container-ci-demo
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      #-
+        #name: Set up QEMU
+        #uses: docker/setup-qemu-action@v1
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
