--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          #context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           label: ${{ steps.meta.outputs.labels }}
