--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
           password: ${{ secrets.GITHUBPASSWORD }}
       -
         name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           #context: .
