--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,11 @@ jobs:
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/container-ci-demo
           tags: latest, ${{ github.run_number }}
+      -
+        name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       #-
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
