--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -34,14 +34,23 @@ jobs:
 
       - name: Grant execute permission for mvnw
         run: chmod +x mvnw
+      
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
         
       # Runs a single command using the runners shell
-      - name: Package app with Maven
-        run: |
-          ./mvnw clean install
-          mv target/container-ci-demo-0.0.1-SNAPSHOT.jar target/container-ci-demo.jar
+      #- name: Package app with Maven
+        #run: |
+         # ./mvnw clean install
+        #  mv target/container-ci-demo-0.0.1-SNAPSHOT.jar target/container-ci-demo.jar
       -
-        name: Publish to GitHub Packages
+        name: Publish Dockerize App to GitHub Packages
         uses: docker/build-push-action@v1
         with:
           username: ${{ github.actor }}
@@ -49,12 +58,21 @@ jobs:
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/container-ci-demo
           tags: latest, ${{ github.run_number }}
-      -
-        name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: Job completed successfully.
+      - name: Application Version
+        id: version
+        uses: paulhatch/semantic-version@v4.0.2
+        with:
+          tag_prefix: "v"
+          change_path: "src/*"
+          major_pattern: "(MAJOR-DB)"
+          minor_pattern: "(MINOR-DB)"
+          namespace: ci-demo
+      #-
+        #name: Slack Notification
+        #uses: rtCamp/action-slack-notify@v2
+        #env:
+          #SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          #SLACK_MESSAGE: Job completed successfully.
       #-
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
