--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -9,8 +9,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    tags:
-      - 'v*'
+    #tags:
+      #- 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
