--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -68,6 +68,11 @@ jobs:
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/container-ci-demo
           tags: latest, ${{ github.run_number }}
+      
+      - name: Release
+        uses: qcastel/github-actions-maven-release@COMMIT_HASH
+        with:
+          access-token: ${{ secrets.GITHUB_TOKEN }}
       #-
         #name: Slack Notification
         #uses: rtCamp/action-slack-notify@v2
