--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -9,8 +9,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    #tags:
-      #- 'v*'
+    tags:
+      - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -70,9 +70,13 @@ jobs:
           tags: latest, ${{ github.run_number }}
       
       - name: Release
-        uses: qcastel/github-actions-maven-release@main
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+        #uses: qcastel/github-actions-maven-release@main
+        #with:
+          #access-token: ${{ secrets.GITHUB_TOKEN }}
       #-
         #name: Slack Notification
         #uses: rtCamp/action-slack-notify@v2
