--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -70,7 +70,7 @@ jobs:
           tags: latest, ${{ github.run_number }}
           
       - name: Release
-        uses: qcastel/github-actions-maven-release@main
+        uses: qcastel/github-actions-maven-release@latest
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
       #-
