--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -50,15 +50,15 @@ jobs:
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
         
-      - name: Application Version
-        id: version
-        uses: paulhatch/semantic-version@v4.0.2
-        with:
-          tag_prefix: "v"
-          change_path: "src/main"
-          major_pattern: "(MAJOR-DB)"
-          minor_pattern: "(MINOR-DB)"
-          namespace: container-ci-demo
+      #- name: Application Version
+        #id: version
+        #uses: paulhatch/semantic-version@v4.0.2
+        #with:
+          #tag_prefix: "v"
+          #change_path: "src/main"
+          #major_pattern: "(MAJOR-DB)"
+          #minor_pattern: "(MINOR-DB)"
+          #namespace: container-ci-demo
       -
         name: Publish Dockerize App to GitHub Packages
         uses: docker/build-push-action@v1
@@ -83,16 +83,17 @@ jobs:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}   
+          
       #- name: Release
         #uses: qcastel/github-actions-maven-release@container-demo
         #with:
           #access-token: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: Job for Release ${{ steps.tag_version.outputs.new_tag }} completed successfully.
+      #-
+        #name: Slack Notification
+        #uses: rtCamp/action-slack-notify@v2
+        #env:
+          #SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          #SLACK_MESSAGE: Job for Release ${{ steps.tag_version.outputs.new_tag }} completed successfully.
       #-
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
