--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Dockerize Springboot App
+name: docker-ci
 
 # Controls when the workflow will run
 on:
