--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -70,8 +70,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: ${{ steps.tag_version.outputs.new_tag }}
+          tag_name: ${{ steps.tag_version.github.run_number }}
+          release_name: ${{ steps.tag_version.github.run_number }}
+          #tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          #release_name: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}   
           
       #- name: Release
