--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -57,7 +57,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/container-ci-demo
-          tags: latest, ${{ github.run_number }}
+          tags: latest, ${{ steps.tag_version.outputs.new_tag }}
           
       - name: Bump version and push tag
         id: tag_version
@@ -70,8 +70,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag_version.github.run_number }}
-          release_name: ${{ steps.tag_version.github.run_number }}
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: ${{ steps.tag_version.outputs.new_tag }}
           #tag_name: ${{ steps.tag_version.outputs.new_tag }}
           #release_name: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}   
