--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -60,6 +60,7 @@ jobs:
           tags: latest, ${{ github.run_number }}
           
       - name: Bump version and push tag
+        id: tag_version
         uses: anothrNick/github-tag-action@1.26.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
