--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -10,8 +10,7 @@ on:
   pull_request:
     branches: [ main ]
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+
-      #- 'v*'
+      - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -65,7 +64,7 @@ jobs:
         uses: anothrNick/github-tag-action@1.26.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: false
+          WITH_V: true
       #- name: Bump version and push tag
         #id: tag_version
         #uses: mathieudutour/github-tag-action@v5
