--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -51,20 +51,21 @@ jobs:
         run: mvn -B test --file pom.xml
       - uses: docker/setup-buildx-action@v1
         name: Set up Docker Buildx
+      - name: Build and push
+        id: gen_tags
+        run: |
+          if [[ $GITHUB_REF == 'refs/tags/'* ]]; then
+            TAGS='["user/image:latest","user/image:'${GITHUB_REF/refs\/tags\//}'"]'
+          else
+            TAGS='["user/image:latest"]'
+          fi
+          echo '::set-output name=tags::'$TAGS
 
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: l7r7/sample
-          tag-custom: latest
-          tag-semver: |
-            {{raw}}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
+        needs: gen_tags
         with:
           context: .
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ${{ fromJson(steps.gen_tags.outputs.tags) }}
