--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -57,7 +57,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/container-ci-demo
-          tags: latest
+          tags: latest, ${{ steps.tag_version.outputs.new_tag }}
           
       - name: Bump version and push tag
         id: tag_version
