--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -49,6 +49,18 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+      
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        #uses: docker/metadata-action@v1
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/sample-node-app
+          tags: |
+            type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'master') }}
+            type=ref,event=tag
+          flavor: |
+            latest=true
       -
         name: Publish Dockerize App to GitHub Packages
         uses: docker/build-push-action@v1
@@ -65,22 +77,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-      #- name: Bump version and push tag
-        #id: tag_version
-        #uses: mathieudutour/github-tag-action@v5
-        #with:
-          #github_token: ${{ secrets.GITHUB_TOKEN }}
-
+      
       - name: Create a GitHub Semantic release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: ${{ steps.tag_version.outputs.new_tag }}
-          #tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          #release_name: ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}   
+          tag_name: ${{ steps.tag_version.outputs.tag }}
+          release_name: ${{ steps.tag_version.outputs.tag }}
+          body: ${{ steps.tag_version.outputs.changelog }} 
+        
+      #- name: Bump version and push tag
+        #id: tag_version
+        #uses: mathieudutour/github-tag-action@v5
+        #with:
+          #github_token: ${{ secrets.GITHUB_TOKEN }}  
           
       #- name: Release
         #uses: qcastel/github-actions-maven-release@container-demo
@@ -92,14 +103,6 @@ jobs:
         #env:
           #SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           #SLACK_MESSAGE: Job for Release ${{ steps.tag_version.outputs.new_tag }} completed successfully.
-      #-
-        # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        #name: Move cache
-        #run: |
-          #rm -rf /tmp/.buildx-cache
-          #mv /tmp/.buildx-cache-new /tmp/.buildx-cache
         
       # Runs a set of commands using the runners shell
       #- name: Build and Push Docker Image
