--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -62,15 +62,16 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         #uses: docker/metadata-action@v1
         with:
-          images: ghcr.io/${{ github.repository_owner }}/sample-node-app
+          images: ghcr.io/${{ github.repository_owner }}/container-ci-demo
           tags: |
             type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'master') }}
             type=ref,event=tag
           flavor: |
             latest=true
+            
       - name: Login to GitHub Container Registry
         #if: GitHub.event_name != 'pull_request'
-      #uses: docker/login-action@v1
+        #uses: docker/login-action@v1
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: ghcr.io
@@ -83,7 +84,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Create a GitHub Semantic release
