--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -84,7 +84,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.new_tag }}
+          tags: latest, ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Create a GitHub Semantic release
