--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -33,7 +33,9 @@ jobs:
           java-version: 11
 
       - name: Grant execute permission for mvnw
-        run: chmod +x mvnw
+        run: |
+          sudo apt install maven
+          chmod +x mvnw
       
       ## Runs a single command using the runners shell
       - name: Package app with Maven
